--- a/src/app/navigation/main-page/main-page.component.html
+++ b/src/app/navigation/main-page/main-page.component.html
@@ -6,10 +6,10 @@
 
 
     <mat-tab-group (selectedTabChange)="executeSelectedChange($event)">
-      <mat-tab label="Matches"><p>All matches</p></mat-tab>
-      <mat-tab label="Players"><p>All players</p></mat-tab>
-      <mat-tab label="Teams"><p>All teams</p></mat-tab>
-      <mat-tab label="Statistics"><p>Team statistics</p></mat-tab>
+      <mat-tab label="Matches"><app-match-view></app-match-view></mat-tab>
+      <mat-tab label="Players"><app-players-view></app-players-view></mat-tab>
+      <mat-tab label="Teams"><app-teams-view></app-teams-view></mat-tab>
+      <mat-tab label="Statistics"><app-statistics-view></app-statistics-view></mat-tab>
     </mat-tab-group>
 
   </div>
