--- a/src/app/navigation/match-view/match-view.component.html
+++ b/src/app/navigation/match-view/match-view.component.html
@@ -1,1 +1,29 @@
 <p>League matches</p>
+
+<table mat-table [dataSource]="dataSource">
+
+  <ng-container matColumnDef="date">
+    <th mat-header-cell *matHeaderCellDef>Date</th>
+    <td mat-cell *matCellDef="let match"> {{match.date | date: 'dd/MM/yy'}}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="homeTeam">
+    <th mat-header-cell *matHeaderCellDef>Home team</th>
+    <td mat-cell *matCellDef="let match"> {{match.homeTeam}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="awayTeam">
+    <th mat-header-cell *matHeaderCellDef>Away team</th>
+    <td mat-cell *matCellDef="let match"> {{match.awayTeam}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="location">
+    <th mat-header-cell *matHeaderCellDef>Location</th>
+    <td mat-cell *matCellDef="let match"> {{match.location}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+
+</table>
+
