--- a/src/app/navigation/match-view/match-view.component.html
+++ b/src/app/navigation/match-view/match-view.component.html
@@ -23,7 +23,6 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-  <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+  <tr mat-row *matRowDef="let match; columns: columnsToDisplay;" [routerLink]="[match.id]"></tr>
 
 </table>
-
