--- a/src/app/navigation/match-view/match-view.component.html
+++ b/src/app/navigation/match-view/match-view.component.html
@@ -4,25 +4,25 @@
 
   <ng-container matColumnDef="date">
     <th mat-header-cell *matHeaderCellDef>Date</th>
-    <td mat-cell *matCellDef="let match"> {{match.date | date: 'dd/MM/yy'}}</td>
+    <td mat-cell *matCellDef="let match"> {{match.info[0].MatchDate | date: 'dd/MM/yy'}}</td>
   </ng-container>
 
   <ng-container matColumnDef="homeTeam">
     <th mat-header-cell *matHeaderCellDef>Home team</th>
-    <td mat-cell *matCellDef="let match"> {{match.homeTeam}} </td>
+    <td mat-cell *matCellDef="let match"> {{match.info[0].HomeTeamName}} </td>
   </ng-container>
 
   <ng-container matColumnDef="awayTeam">
     <th mat-header-cell *matHeaderCellDef>Away team</th>
-    <td mat-cell *matCellDef="let match"> {{match.awayTeam}} </td>
+    <td mat-cell *matCellDef="let match"> {{match.info[0].AwayTeamName}} </td>
   </ng-container>
 
   <ng-container matColumnDef="location">
     <th mat-header-cell *matHeaderCellDef>Location</th>
-    <td mat-cell *matCellDef="let match"> {{match.location}} </td>
+    <td mat-cell *matCellDef="let match"> {{match.info[0].ActivityAreaName}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-  <tr mat-row *matRowDef="let match; columns: columnsToDisplay;" [routerLink]="[match.id]"></tr>
+  <tr mat-row *matRowDef="let match; columns: columnsToDisplay;" [routerLink]="[match.info[0].MatchNo]"></tr>
 
 </table>
