--- a/src/app/navigation/main-page/main-page.component.html
+++ b/src/app/navigation/main-page/main-page.component.html
@@ -4,12 +4,12 @@
 
     <p>Østlandsserien 2019/2020</p>
 
-    <!--    <mat-tab-group (selectedTabChange)="executeSelectedChange($event)">
-          <mat-tab label="Matches"><app-match-view></app-match-view></mat-tab>
-          <mat-tab label="Players"><app-players-view></app-players-view></mat-tab>
-          <mat-tab label="Teams"><app-teams-view></app-teams-view></mat-tab>
-          <mat-tab label="Statistics"><app-statistics-view></app-statistics-view></mat-tab>
-        </mat-tab-group>-->
+    <mat-tab-group (selectedTabChange)="executeSelectedChange($event)">
+      <mat-tab label="Matches"></mat-tab>
+      <mat-tab label="Players"></mat-tab>
+      <mat-tab label="Teams"></mat-tab>
+      <mat-tab label="Statistics"></mat-tab>
+    </mat-tab-group>
 
     <router-outlet></router-outlet>
 
