--- a/src/app/navigation/match-details/match-details.component.html
+++ b/src/app/navigation/match-details/match-details.component.html
@@ -1,4 +1,33 @@
-<p>{{match.info[0].MatchDate | date: 'dd/MM/yy'}} - {{match.info[0].HomeTeamName}} - {{match.info[0].AwayTeamName}}
-  - {{match.info[0].ActivityAreaName}}</p>
+<h2>Goals</h2>
 
-<p>{{match.info[0].ResultsFormatted}}</p>
+<table mat-table [dataSource]="goals">
+
+  <ng-container matColumnDef="time">
+    <th mat-header-cell *matHeaderCellDef>Time</th>
+    <td mat-cell *matCellDef="let goal"> {{goal["Time"]}}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="scorer">
+    <th mat-header-cell *matHeaderCellDef>Scorer</th>
+    <td mat-cell *matCellDef="let goal"> {{goal.Scorer}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="assist">
+    <th mat-header-cell *matHeaderCellDef>Assist</th>
+    <td mat-cell *matCellDef="let goal"> {{goal.Assist}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="team">
+    <th mat-header-cell *matHeaderCellDef>Team</th>
+    <td mat-cell *matCellDef="let goal"> {{goal.TeamName}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="partial_result">
+    <th mat-header-cell *matHeaderCellDef>Partial Result</th>
+    <td mat-cell *matCellDef="let goal"> {{goal.PartialResult}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr mat-row *matRowDef="let goal; columns: columnsToDisplay;"></tr>
+
+</table>
