Pretty print penalties in separate table

--- a/src/app/navigation/match-details/match-details.component.html
+++ b/src/app/navigation/match-details/match-details.component.html
@@ -1,5 +1,4 @@
-<h2>Goals</h2>
 
 <app-goal-table [goals]="goals"></app-goal-table>
 
-<app-penalties-table [penalties]="penalties"></app-penalties-table>
+<app-penalties-table [matchPenalties]="penalties"></app-penalties-table>
