--- a/src/app/navigation/penalties-table/penalties-table.component.html
+++ b/src/app/navigation/penalties-table/penalties-table.component.html
@@ -1,24 +1,32 @@
+<h3>Penalties</h3>
+
 <table mat-table [dataSource]="penalties">
 
-  <ng-container matColumnDef="awayTime">
-    <th mat-header-cell *matHeaderCellDef>AwayTime</th>
-    <td mat-cell *matCellDef="let penalty"> {{penalty["AwayTime"]}}</td>
+  <ng-container matColumnDef="time">
+    <th mat-header-cell *matHeaderCellDef>Time</th>
+    <td mat-cell *matCellDef="let penalty"> {{penalty["time"]}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="homeTime">
-    <th mat-header-cell *matHeaderCellDef>HomeTime</th>
-    <td mat-cell *matCellDef="let penalty"> {{penalty["HomeTime"]}} </td>
+  <ng-container matColumnDef="player">
+    <th mat-header-cell *matHeaderCellDef>Player</th>
+    <td mat-cell *matCellDef="let penalty"> {{penalty["player"]}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="homePenalty">
-    <th mat-header-cell *matHeaderCellDef>HomePenalty</th>
-    <td mat-cell *matCellDef="let penalty"> {{penalty["HomePenalty"]}} </td>
+  <ng-container matColumnDef="penaltyDuration">
+    <th mat-header-cell *matHeaderCellDef>Duration</th>
+    <td mat-cell *matCellDef="let penalty"> {{penalty["penaltyDuration"]}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="awayPenalty">
-    <th mat-header-cell *matHeaderCellDef>AwayPenalty</th>
-    <td mat-cell *matCellDef="let penalty"> {{penalty["AwayPenalty"]}} </td>
+  <ng-container matColumnDef="reason">
+    <th mat-header-cell *matHeaderCellDef>Reason</th>
+    <td mat-cell *matCellDef="let penalty"> {{penalty["reason"]}} </td>
   </ng-container>
+
+  <ng-container matColumnDef="team">
+    <th mat-header-cell *matHeaderCellDef>Team</th>
+    <td mat-cell *matCellDef="let penalty"> {{penalty["team"]}}</td>
+  </ng-container>
+
 
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
   <tr mat-row *matRowDef="let penalty; columns: columnsToDisplay;"></tr>
