Added new pipe for formatting norwegian dates

--- a/src/app/navigation/match-details/match-details.component.html
+++ b/src/app/navigation/match-details/match-details.component.html
@@ -1,3 +1,10 @@
+<div>
+  <p>{{matchInfo.MatchDate | dateNorwegian }}</p>
+  <p>{{matchInfo.HomeTeamName}} - {{matchInfo.AwayTeamName}}</p>
+  <p>{{matchInfo.ActivityAreaName}}</p>
+  <p>{{matchInfo.ResultsFormatted}}</p>
+
+</div>
 
 <app-goal-table [goals]="goals"></app-goal-table>
 
