--- a/src/app/navigation/teams-view/teams-view.component.html
+++ b/src/app/navigation/teams-view/teams-view.component.html
@@ -1,1 +1,50 @@
 <p>All teams</p>
+
+
+<table mat-table [dataSource]="teamNames">
+
+  <ng-container matColumnDef="teamName">
+    <th mat-header-cell *matHeaderCellDef>Team name</th>
+    <td mat-cell *matCellDef="let team"> {{team }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="matches">
+    <th mat-header-cell *matHeaderCellDef>K</th>
+    <td mat-cell *matCellDef="let match"> {{0}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="victories">
+    <th mat-header-cell *matHeaderCellDef>S</th>
+    <td mat-cell *matCellDef="let match"> {{0}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="victory-penalty">
+    <th mat-header-cell *matHeaderCellDef>US</th>
+    <td mat-cell *matCellDef="let match"> {{0}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="loss-penalty">
+    <th mat-header-cell *matHeaderCellDef>UT</th>
+    <td mat-cell *matCellDef="let match"> {{0}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="loss">
+    <th mat-header-cell *matHeaderCellDef>T</th>
+    <td mat-cell *matCellDef="let match"> {{0}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="goalDiff">
+    <th mat-header-cell *matHeaderCellDef>+-</th>
+    <td mat-cell *matCellDef="let match"> {{0}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="points">
+    <th mat-header-cell *matHeaderCellDef>P</th>
+    <td mat-cell *matCellDef="let match"> {{0}} </td>
+  </ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr mat-row *matRowDef="let team; columns: columnsToDisplay;"></tr>
+
+</table>
