--- a/src/app/navigation/teams-view/teams-view.component.html
+++ b/src/app/navigation/teams-view/teams-view.component.html
@@ -10,47 +10,47 @@
 
   <ng-container matColumnDef="matches">
     <th mat-header-cell *matHeaderCellDef>K</th>
-    <td mat-cell *matCellDef="let match"> {{0}} </td>
+    <td mat-cell *matCellDef="let match"> {{match.stats.matchesPlayed}} </td>
   </ng-container>
 
   <ng-container matColumnDef="victories">
     <th mat-header-cell *matHeaderCellDef>S</th>
-    <td mat-cell *matCellDef="let match"> {{0}} </td>
+    <td mat-cell *matCellDef="let match"> {{match.stats.victories}} </td>
   </ng-container>
 
   <ng-container matColumnDef="victory-penalty">
     <th mat-header-cell *matHeaderCellDef>US</th>
-    <td mat-cell *matCellDef="let match"> {{0}} </td>
+    <td mat-cell *matCellDef="let match"> {{match.stats.penaltyVictories}} </td>
   </ng-container>
 
   <ng-container matColumnDef="loss-penalty">
     <th mat-header-cell *matHeaderCellDef>UT</th>
-    <td mat-cell *matCellDef="let match"> {{0}} </td>
+    <td mat-cell *matCellDef="let match"> {{match.stats.lossPenalties}} </td>
   </ng-container>
 
   <ng-container matColumnDef="loss">
     <th mat-header-cell *matHeaderCellDef>T</th>
-    <td mat-cell *matCellDef="let match"> {{0}} </td>
+    <td mat-cell *matCellDef="let match"> {{match.stats.losses}} </td>
   </ng-container>
 
   <ng-container matColumnDef="goalsFor">
     <th mat-header-cell *matHeaderCellDef>GF</th>
-    <td mat-cell *matCellDef="let match"> {{match.goalsFor}} </td>
+    <td mat-cell *matCellDef="let match"> {{match.stats.goalsFor}} </td>
   </ng-container>
 
   <ng-container matColumnDef="goalsAgainst">
     <th mat-header-cell *matHeaderCellDef>GA</th>
-    <td mat-cell *matCellDef="let match"> {{match.goalsAgainst}} </td>
+    <td mat-cell *matCellDef="let match"> {{match.stats.goalsAgainst}} </td>
   </ng-container>
 
   <ng-container matColumnDef="goalDiff">
     <th mat-header-cell *matHeaderCellDef>+-</th>
-    <td mat-cell *matCellDef="let match"> {{match.goalsFor - match.goalsAgainst}} </td>
+    <td mat-cell *matCellDef="let match"> {{match.stats.goalsFor - match.stats.goalsAgainst}} </td>
   </ng-container>
 
   <ng-container matColumnDef="points">
     <th mat-header-cell *matHeaderCellDef>P</th>
-    <td mat-cell *matCellDef="let match"> {{match.points}} </td>
+    <td mat-cell *matCellDef="let match"> {{match.stats.points}} </td>
   </ng-container>
 
 
