--- a/src/app/navigation/players-view/players-view.component.html
+++ b/src/app/navigation/players-view/players-view.component.html
@@ -1,1 +1,31 @@
 <p>All players</p>
+
+
+<h1>Participants</h1>
+
+
+<table mat-table [dataSource]="participants.HomePlayers">
+  <ng-container matColumnDef="playername">
+    <th mat-header-cell *matHeaderCellDef>Player</th>
+    <td mat-cell *matCellDef="let player"> {{player.FullName}}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="points">
+    <th mat-header-cell *matHeaderCellDef>Points</th>
+    <td mat-cell *matCellDef="let player"> {{player.Points}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="goals">
+    <th mat-header-cell *matHeaderCellDef>Goals</th>
+    <td mat-cell *matCellDef="let player"> {{player.Goals}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="assists">
+    <th mat-header-cell *matHeaderCellDef>Assists</th>
+    <td mat-cell *matCellDef="let player"> {{player.Assists}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr mat-row *matRowDef="let player; columns: columnsToDisplay;"></tr>
+
+</table>
