--- a/src/app/navigation/players-view/players-view.component.html
+++ b/src/app/navigation/players-view/players-view.component.html
@@ -4,25 +4,30 @@
 <h1>Participants</h1>
 
 
-<table mat-table [dataSource]="participants.HomePlayers">
+<table mat-table [dataSource]="players">
   <ng-container matColumnDef="playername">
     <th mat-header-cell *matHeaderCellDef>Player</th>
-    <td mat-cell *matCellDef="let player"> {{player.FullName}}</td>
+    <td mat-cell *matCellDef="let player"> {{player.name}}</td>
   </ng-container>
 
-  <ng-container matColumnDef="points">
-    <th mat-header-cell *matHeaderCellDef>Points</th>
-    <td mat-cell *matCellDef="let player"> {{player.Points}} </td>
+  <ng-container matColumnDef="matchesPlayed">
+    <th mat-header-cell *matHeaderCellDef>K</th>
+    <td mat-cell *matCellDef="let player"> {{player.matchesPlayed}} </td>
   </ng-container>
 
   <ng-container matColumnDef="goals">
-    <th mat-header-cell *matHeaderCellDef>Goals</th>
-    <td mat-cell *matCellDef="let player"> {{player.Goals}} </td>
+    <th mat-header-cell *matHeaderCellDef>M</th>
+    <td mat-cell *matCellDef="let player"> {{player.goals}} </td>
   </ng-container>
 
   <ng-container matColumnDef="assists">
-    <th mat-header-cell *matHeaderCellDef>Assists</th>
-    <td mat-cell *matCellDef="let player"> {{player.Assists}} </td>
+    <th mat-header-cell *matHeaderCellDef>A</th>
+    <td mat-cell *matCellDef="let player"> {{player.assists}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="points">
+    <th mat-header-cell *matHeaderCellDef>P</th>
+    <td mat-cell *matCellDef="let player"> {{player.points}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
