--- a/src/app/navigation/players-view/players-view.component.html
+++ b/src/app/navigation/players-view/players-view.component.html
@@ -10,6 +10,11 @@
     <td mat-cell *matCellDef="let player"> {{player.name}}</td>
   </ng-container>
 
+  <ng-container matColumnDef="teamName">
+    <th mat-header-cell *matHeaderCellDef>Team</th>
+    <td mat-cell *matCellDef="let player"> {{player.teamName}} </td>
+  </ng-container>
+
   <ng-container matColumnDef="matchesPlayed">
     <th mat-header-cell *matHeaderCellDef>K</th>
     <td mat-cell *matCellDef="let player"> {{player.matchesPlayed}} </td>
