--- a/src/app/navigation/players-view/players-view.component.html
+++ b/src/app/navigation/players-view/players-view.component.html
@@ -4,34 +4,34 @@
 <h1>Participants</h1>
 
 
-<table mat-table [dataSource]="players">
+<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
   <ng-container matColumnDef="playername">
-    <th mat-header-cell *matHeaderCellDef>Player</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Player</th>
     <td mat-cell *matCellDef="let player"> {{player.name}}</td>
   </ng-container>
 
   <ng-container matColumnDef="teamName">
-    <th mat-header-cell *matHeaderCellDef>Team</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Team</th>
     <td mat-cell *matCellDef="let player"> {{player.teamName}} </td>
   </ng-container>
 
   <ng-container matColumnDef="matchesPlayed">
-    <th mat-header-cell *matHeaderCellDef>K</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>K</th>
     <td mat-cell *matCellDef="let player"> {{player.matchesPlayed}} </td>
   </ng-container>
 
   <ng-container matColumnDef="goals">
-    <th mat-header-cell *matHeaderCellDef>M</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>M</th>
     <td mat-cell *matCellDef="let player"> {{player.goals}} </td>
   </ng-container>
 
   <ng-container matColumnDef="assists">
-    <th mat-header-cell *matHeaderCellDef>A</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>A</th>
     <td mat-cell *matCellDef="let player"> {{player.assists}} </td>
   </ng-container>
 
   <ng-container matColumnDef="points">
-    <th mat-header-cell *matHeaderCellDef>P</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>P</th>
     <td mat-cell *matCellDef="let player"> {{player.points}} </td>
   </ng-container>
 
