listing player stats per match

--- a/src/app/navigation/player-stats/player-stats.component.html
+++ b/src/app/navigation/player-stats/player-stats.component.html
@@ -1,1 +1,10 @@
 <p>player-stats works!</p>
+
+<ul>
+  <li *ngFor="let match of matches | keyvalue">
+    {{match.key}}
+    <div *ngFor="let player of match.value">
+      <p>{{player.FullName}}: did {{player.Points}} point(s) ({{player.Goals}} + {{player.Assists}})</p>
+    </div>
+  </li>
+</ul>
