--- a/src/app/navigation/main-page/main-page.component.html
+++ b/src/app/navigation/main-page/main-page.component.html
@@ -5,9 +5,9 @@
     <p>Østlandsserien 2018/2019</p>
 
     <mat-tab-group (selectedTabChange)="executeSelectedChange($event)">
+      <mat-tab label="Standings"></mat-tab>
       <mat-tab label="Matches"></mat-tab>
       <mat-tab label="Players"></mat-tab>
-      <mat-tab label="Teams"></mat-tab>
       <mat-tab label="Statistics"></mat-tab>
     </mat-tab-group>
 
