--- a/src/app/navigation/players-view/players-view.component.html
+++ b/src/app/navigation/players-view/players-view.component.html
@@ -31,7 +31,7 @@
 
   <ng-container matColumnDef="goals">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>M</th>
-    <td mat-cell *matCellDef="let player"> {{player.goals}} </td>
+    <td mat-cell *matCellDef="let player"> {{sumValues(player.goals)}} </td>
   </ng-container>
 
   <ng-container matColumnDef="assists">
