--- a/src/app/navigation/players-view/players-view.component.html
+++ b/src/app/navigation/players-view/players-view.component.html
@@ -36,12 +36,12 @@
 
   <ng-container matColumnDef="assists">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>A</th>
-    <td mat-cell *matCellDef="let player"> {{player.assists}} </td>
+    <td mat-cell *matCellDef="let player"> {{sumValues(player.assists)}} </td>
   </ng-container>
 
   <ng-container matColumnDef="points">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>P</th>
-    <td mat-cell *matCellDef="let player"> {{player.points}} </td>
+    <td mat-cell *matCellDef="let player"> {{sumValues(player.points)}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
