Line chart is separate component, but with hardcoded values

--- a/src/app/navigation/players-view/player-graph/player-graph.component.html
+++ b/src/app/navigation/players-view/player-graph/player-graph.component.html
@@ -7,3 +7,5 @@
 <p>Number of assists: {{this.sumValues(player.assists)}}</p>
 
 {{player | json}}
+
+<app-line-chart [player]="player"></app-line-chart>
