Started logic for accumulating player statistics

--- a/src/app/navigation/players-view/player-graph/player-graph.component.html
+++ b/src/app/navigation/players-view/player-graph/player-graph.component.html
@@ -9,3 +9,4 @@
 {{player | json}}
 
 <app-line-chart [player]="player"></app-line-chart>
+<app-line-chart [player]="accumulatedPlayer"></app-line-chart>
