--- a/src/app/navigation/teams-view/standings.component.html
+++ b/src/app/navigation/teams-view/standings.component.html
@@ -35,22 +35,22 @@
 
   <ng-container matColumnDef="goalsFor">
     <th mat-header-cell *matHeaderCellDef>GF</th>
-    <td mat-cell *matCellDef="let match"> {{match.stats.goalsFor}} </td>
+    <td mat-cell *matCellDef="let match"> {{getSum(match.stats.goalsFor)}} </td>
   </ng-container>
 
   <ng-container matColumnDef="goalsAgainst">
     <th mat-header-cell *matHeaderCellDef>GA</th>
-    <td mat-cell *matCellDef="let match"> {{match.stats.goalsAgainst}} </td>
+    <td mat-cell *matCellDef="let match"> {{getSum(match.stats.goalsAgainst)}} </td>
   </ng-container>
 
   <ng-container matColumnDef="goalDiff">
     <th mat-header-cell *matHeaderCellDef>+-</th>
-    <td mat-cell *matCellDef="let match"> {{match.stats.goalsFor - match.stats.goalsAgainst}} </td>
+    <td mat-cell *matCellDef="let match"> {{getSum(match.stats.goalsFor) - getSum(match.stats.goalsAgainst)}} </td>
   </ng-container>
 
   <ng-container matColumnDef="points">
     <th mat-header-cell *matHeaderCellDef>P</th>
-    <td mat-cell *matCellDef="let match"> {{match.stats.points}} </td>
+    <td mat-cell *matCellDef="let match"> {{getSum(match.stats.points)}} </td>
   </ng-container>
 
 
