New component to display cummulative standings

--- a/src/app/navigation/standings-view/standings.component.html
+++ b/src/app/navigation/standings-view/standings.component.html
@@ -58,3 +58,6 @@
   <tr mat-row *matRowDef="let team; columns: columnsToDisplay;"></tr>
 
 </table>
+
+
+<app-cummulative-standings [matchData]="matches"></app-cummulative-standings>
