--- a/src/app/navigation/utils/line-chart/line-chart.component.html
+++ b/src/app/navigation/utils/line-chart/line-chart.component.html
@@ -11,7 +11,7 @@
   [xAxisLabel]="xAxisLabel"
   [yAxisLabel]="yAxisLabel"
   [animations]="true"
-  [results]="multi"
+  [results]="dataSeries"
   [xAxisTickFormatting]="displayOnlyIntegers"
   [yAxisTickFormatting]="displayOnlyIntegers"
 >
