--- a/src/app/navigation/standings-view/cummulative-standings/cummulative-standings.component.html
+++ b/src/app/navigation/standings-view/cummulative-standings/cummulative-standings.component.html
@@ -1,3 +1,3 @@
 <p>cummulative-standings works!</p>
 
-{{matchData | json}}
+<app-line-chart [title]="perMatchTitle" [dataSeries]="data"></app-line-chart>
