--- a/src/app/navigation/standings-view/standings.component.html
+++ b/src/app/navigation/standings-view/standings.component.html
@@ -1,63 +1,5 @@
 <p>All teams</p>
 
-
-<table mat-table [dataSource]="matches">
-
-  <ng-container matColumnDef="teamName">
-    <th mat-header-cell *matHeaderCellDef>Team name</th>
-    <td mat-cell *matCellDef="let match"> {{match.teamName }}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="matches">
-    <th mat-header-cell *matHeaderCellDef>K</th>
-    <td mat-cell *matCellDef="let match"> {{match.stats.matchesPlayed}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="victories">
-    <th mat-header-cell *matHeaderCellDef>S</th>
-    <td mat-cell *matCellDef="let match"> {{match.stats.victories}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="victory-penalty">
-    <th mat-header-cell *matHeaderCellDef>US</th>
-    <td mat-cell *matCellDef="let match"> {{match.stats.penaltyVictories}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="loss-penalty">
-    <th mat-header-cell *matHeaderCellDef>UT</th>
-    <td mat-cell *matCellDef="let match"> {{match.stats.lossPenalties}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="loss">
-    <th mat-header-cell *matHeaderCellDef>T</th>
-    <td mat-cell *matCellDef="let match"> {{match.stats.losses}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="goalsFor">
-    <th mat-header-cell *matHeaderCellDef>GF</th>
-    <td mat-cell *matCellDef="let match"> {{getSum(match.stats.goalsFor)}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="goalsAgainst">
-    <th mat-header-cell *matHeaderCellDef>GA</th>
-    <td mat-cell *matCellDef="let match"> {{getSum(match.stats.goalsAgainst)}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="goalDiff">
-    <th mat-header-cell *matHeaderCellDef>+-</th>
-    <td mat-cell *matCellDef="let match"> {{getSum(match.stats.goalsFor) - getSum(match.stats.goalsAgainst)}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="points">
-    <th mat-header-cell *matHeaderCellDef>P</th>
-    <td mat-cell *matCellDef="let match"> {{getSum(match.stats.points)}} </td>
-  </ng-container>
-
-
-  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-  <tr mat-row *matRowDef="let team; columns: columnsToDisplay;"></tr>
-
-</table>
-
+<app-table-standings [matchData]="matches"></app-table-standings>
 
 <app-cummulative-standings [matchData]="matches"></app-cummulative-standings>
