--- a/src/app/navigation/match-view/match-top-view/match-top-view.component.html
+++ b/src/app/navigation/match-view/match-top-view/match-top-view.component.html
@@ -22,6 +22,11 @@
     <td mat-cell *matCellDef="let match"> {{match.info.ActivityAreaName}} </td>
   </ng-container>
 
+  <ng-container matColumnDef="result">
+    <th mat-header-cell *matHeaderCellDef>Result</th>
+    <td mat-cell *matCellDef="let match"> {{match.info.EndResult || ''}} </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
   <tr mat-row *matRowDef="let match; columns: columnsToDisplay;" [routerLink]="[match.info.MatchNo]"></tr>
 
