--- a/src/app/navigation/players-view/player-overview/players-view.component.html
+++ b/src/app/navigation/players-view/player-overview/players-view.component.html
@@ -44,6 +44,11 @@
     <td mat-cell *matCellDef="let player"> {{sumValues(player.points)}} </td>
   </ng-container>
 
+  <ng-container matColumnDef="penalties">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>PIM</th>
+    <td mat-cell *matCellDef="let player"> {{sumValues(player.penalties)}} </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
   <tr mat-row *matRowDef="let player; columns: columnsToDisplay;" [routerLink]="[player.fullName, player]"></tr>
 
