Introducing new sub tabs for penalties

--- a/src/app/navigation/players-view/player-graph/player-graph.component.html
+++ b/src/app/navigation/players-view/player-graph/player-graph.component.html
@@ -15,4 +15,10 @@
   <mat-tab label="Points accumulated">
     <app-line-chart [title]="accumulatedTitle" [dataSeries]="accData"></app-line-chart>
   </mat-tab>
+  <mat-tab label="Penalties per match">
+
+  </mat-tab>
+  <mat-tab label="Penalties accumulated">
+
+  </mat-tab>
 </mat-tab-group>
