Showing penalty data in sub page graphs

--- a/src/app/navigation/utils/line-chart/line-chart.component.html
+++ b/src/app/navigation/utils/line-chart/line-chart.component.html
@@ -14,5 +14,6 @@
   [results]="dataSeries"
   [xAxisTickFormatting]="displayOnlyIntegers"
   [yAxisTickFormatting]="displayOnlyIntegers"
+  [xAxisTicks]="xTicks"
 >
 </ngx-charts-line-chart>
