--- a/src/app/navigation/players-view/player-graph/player-graph.component.html
+++ b/src/app/navigation/players-view/player-graph/player-graph.component.html
@@ -8,7 +8,7 @@
 
 {{player | json}}
 
-<mat-tab-group>
+<mat-tab-group [dynamicHeight]="true">
   <mat-tab label="Points per match">
     <app-line-chart [title]="perMatchTitle" [dataSeries]="data"></app-line-chart>
   </mat-tab>
@@ -16,9 +16,9 @@
     <app-line-chart [title]="accumulatedTitle" [dataSeries]="accData"></app-line-chart>
   </mat-tab>
   <mat-tab label="Penalties per match">
-
+    <app-line-chart [title]="perMatchTitle" [dataSeries]="penaltyData"></app-line-chart>
   </mat-tab>
   <mat-tab label="Penalties accumulated">
-
+    <app-line-chart [title]="accumulatedTitle" [dataSeries]="accPenaltyData"></app-line-chart>
   </mat-tab>
 </mat-tab-group>
