--- a/src/app/navigation/standings-view/cummulative-standings/cummulative-standings.component.html
+++ b/src/app/navigation/standings-view/cummulative-standings/cummulative-standings.component.html
@@ -1,1 +1,1 @@
-<app-line-chart [title]="perMatchTitle" [dataSeries]="data"></app-line-chart>
+<app-line-chart [dataSeries]="data"></app-line-chart>
