--- a/src/app/navigation/standings-view/table-standings/table-standings.component.html
+++ b/src/app/navigation/standings-view/table-standings/table-standings.component.html
@@ -1,53 +1,58 @@
 <table mat-table [dataSource]="matchData">
 
+  <ng-container matColumnDef="rank">
+    <th mat-header-cell *matHeaderCellDef>Rank</th>
+    <td mat-cell *matCellDef="let element; index as i"> {{ i+1 }}</td>
+  </ng-container>
+
   <ng-container matColumnDef="teamName">
     <th mat-header-cell *matHeaderCellDef>Team name</th>
-    <td mat-cell *matCellDef="let match"> {{match.teamName }}</td>
+    <td mat-cell *matCellDef="let teamEntry"> {{teamEntry.teamName }}</td>
   </ng-container>
 
   <ng-container matColumnDef="matches">
     <th mat-header-cell *matHeaderCellDef>K</th>
-    <td mat-cell *matCellDef="let match"> {{match.stats.matchesPlayed}} </td>
+    <td mat-cell *matCellDef="let teamEntry"> {{teamEntry.stats.matchesPlayed}} </td>
   </ng-container>
 
   <ng-container matColumnDef="victories">
     <th mat-header-cell *matHeaderCellDef>S</th>
-    <td mat-cell *matCellDef="let match"> {{match.stats.victories}} </td>
+    <td mat-cell *matCellDef="let teamEntry"> {{teamEntry.stats.victories}} </td>
   </ng-container>
 
   <ng-container matColumnDef="victory-penalty">
     <th mat-header-cell *matHeaderCellDef>US</th>
-    <td mat-cell *matCellDef="let match"> {{match.stats.penaltyVictories}} </td>
+    <td mat-cell *matCellDef="let teamEntry"> {{teamEntry.stats.penaltyVictories}} </td>
   </ng-container>
 
   <ng-container matColumnDef="loss-penalty">
     <th mat-header-cell *matHeaderCellDef>UT</th>
-    <td mat-cell *matCellDef="let match"> {{match.stats.lossPenalties}} </td>
+    <td mat-cell *matCellDef="let teamEntry"> {{teamEntry.stats.lossPenalties}} </td>
   </ng-container>
 
   <ng-container matColumnDef="loss">
     <th mat-header-cell *matHeaderCellDef>T</th>
-    <td mat-cell *matCellDef="let match"> {{match.stats.losses}} </td>
+    <td mat-cell *matCellDef="let teamEntry"> {{teamEntry.stats.losses}} </td>
   </ng-container>
 
   <ng-container matColumnDef="goalsFor">
     <th mat-header-cell *matHeaderCellDef>GF</th>
-    <td mat-cell *matCellDef="let match"> {{getSum(match.stats.goalsFor)}} </td>
+    <td mat-cell *matCellDef="let teamEntry"> {{getSum(teamEntry.stats.goalsFor)}} </td>
   </ng-container>
 
   <ng-container matColumnDef="goalsAgainst">
     <th mat-header-cell *matHeaderCellDef>GA</th>
-    <td mat-cell *matCellDef="let match"> {{getSum(match.stats.goalsAgainst)}} </td>
+    <td mat-cell *matCellDef="let teamEntry"> {{getSum(teamEntry.stats.goalsAgainst)}} </td>
   </ng-container>
 
   <ng-container matColumnDef="goalDiff">
     <th mat-header-cell *matHeaderCellDef>+-</th>
-    <td mat-cell *matCellDef="let match"> {{getSum(match.stats.goalsFor) - getSum(match.stats.goalsAgainst)}} </td>
+    <td mat-cell *matCellDef="let teamEntry"> {{getSum(teamEntry.stats.goalsFor) - getSum(teamEntry.stats.goalsAgainst)}} </td>
   </ng-container>
 
   <ng-container matColumnDef="points">
     <th mat-header-cell *matHeaderCellDef>P</th>
-    <td mat-cell *matCellDef="let match"> {{getSum(match.stats.points)}} </td>
+    <td mat-cell *matCellDef="let teamEntry"> {{getSum(teamEntry.stats.points)}} </td>
   </ng-container>
 
 
